# cupt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
cupt/: __init__.py  ai.py  api.py  attachments.py  auth.py  config.py  context.py  exceptions.py  main.py  notes.py  summary.py  tags.py  tasks.py  time_tracker.py  utils.py
cupt/services/: __init__.py  note_service.py  task_service.py  time_service.py
tests/: conftest.py  test_ai.py  test_api.py  test_attachments.py  test_auth.py  test_config.py  test_context.py  test_main.py  test_notes.py  test_summary.py  test_tags.py  test_task_service.py  test_tasks.py  test_time_tracker.py  test_utils.py
