[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cupt"
dynamic = ["version"]
description = "ClickUp Task Management CLI and Python library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "Matthew Nuzum", email = "matthew@nuzum.com"}]
keywords = ["clickup", "cli", "tasks", "productivity", "task-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "cryptography>=3.4.0",
    "pyyaml>=5.4.0",
    "colorama>=0.4.4",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/newz2000/cupt"
Repository = "https://github.com/newz2000/cupt"
Issues = "https://github.com/newz2000/cupt/issues"
Changelog = "https://github.com/newz2000/cupt/blob/main/CHANGELOG.md"

[project.scripts]
cupt = "cupt.main:cli"

[tool.setuptools]
packages = ["cupt", "cupt.services"]

[tool.setuptools.dynamic]
version = {attr = "cupt.__version__"}

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py38"
extend-exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Conservative starter set. Add more rule families (e.g. UP, B, C4, SIM)
# once the codebase has been groomed.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line-too-long — the formatter handles wrapping; long URLs/strings sometimes legitimately exceed 88.
]

[tool.ruff.lint.per-file-ignores]
# Tests use lots of fixtures and mocked symbols that ruff thinks are unused.
"tests/*" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
